Fix email button mobile

--- a/public/main.css
+++ b/public/main.css
@@ -142,15 +142,16 @@ footer p {
   display: flex;
   border: none;
   outline: none;
-  padding: 0 25px;
+  padding: 0 0 0 25px;
   flex-grow: 1;
   border-top-left-radius: var(--mail-input-radius-size);
   border-bottom-left-radius: var(--mail-input-radius-size);
 }
 
 .mail-input__button {
-  border-radius: var(--mail-input-radius-size);
   height: 100%;
+  width: 160px;
+  border-radius: var(--mail-input-radius-size);
   display: flex;
   border: none;
   outline: none;
@@ -164,9 +165,15 @@ footer p {
 }
 
 @media (max-width: 575.98px) {
+  .mail-input__input {
+    width: 50%;
+  }
   .mail-input__button {
-    padding: 15px 20px;
+    padding: 15px 0;
+    width: 40%;
     font-size: 0.8rem;
+    text-align: center;
+    display: block;
   }
 }
 
